# claude-code-extensions

./: .gitignore  README.md
utilities/command-image-downscale/: README.md  image-downscale.md  pyproject.toml
utilities/command-image-downscale/scripts/: batch_processor.py
utilities/image-downscale/: .gitignore  .image-downscale.json.example  README.md  SKILL.md  setup.sh
utilities/image-downscale/references/: usage-guide.md
utilities/image-downscale/scripts/: downscale_core.py  image_processor.py  obsidian_processor.py
utilities/skill-image-downscale/: README.md  SKILL.md  pyproject.toml  setup.sh
utilities/skill-image-downscale/references/: usage-guide.md
utilities/skill-image-downscale/scripts/: downscale_core.py
